# hetero-system

./: README.md
gazebo_worlds_description/autoware_worlds/: CMakeLists.txt  package.xml
gazebo_worlds_description/autoware_worlds/launch/: autoware_world.launch
gazebo_worlds_description/aws_robomaker_worlds/: CMakeLists.txt  package.xml
gazebo_worlds_description/aws_robomaker_worlds/launch/: bookstore.launch  small_house.launch
gazebo_worlds_description/dolly_gazebo_worlds/: CMakeLists.txt  package.xml
gazebo_worlds_description/dolly_gazebo_worlds/launch/: dolly_city.launch
gazebo_worlds_description/dolly_gazebo_worlds/worlds/: dolly_city.world
hetero_bridge/: CMakeLists.txt  package.xml
hetero_bridge/include/: hetero_manipulator.h  uav_ugv_bridge.h
hetero_bridge/launch/: hetero_bookstore.launch  hetero_dolly_city.launch  hetero_empty_world.launch  hetero_small_house.launch  hetero_twist_teleop.launch
hetero_bridge/src/: hetero_manipulator.cpp  uav_ugv_bridge.cpp  uav_ugv_bridge_main.cpp
hetero_bridge/srv/: TakeOff.srv
hetero_teleop_twist/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
mecanum_ugv/mecanum_ugv_description/: CMakeLists.txt  package.xml
mecanum_ugv/mecanum_ugv_description/config/: config.rviz
mecanum_ugv/mecanum_ugv_manipulator/: CMakeLists.txt  package.xml
mecanum_ugv/ugv_control_plugins/: CMakeLists.txt  package.xml
quadrotor_uav/quadrotor_navigation/: CMakeLists.txt  package.xml
quadrotor_uav/quadrotor_uav_description/: CMakeLists.txt  package.xml
quadrotor_uav/uav_control_plugins/: CMakeLists.txt  package.xml
(+48 files in other folders)
