<package>
  <name>dolly_gazebo_worlds</name>
  <version>0.5.1</version>
  <description>Launch Gazebo simulation with Dolly robot.</description>
  <maintainer email="Zhijun_lyu@163.com">Louie Lyu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_gazebo_worlds</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="burajiru.no.chapulina@gmail.com">Louise Poubel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>gazebo_ros</test_depend> -->
  <!-- <test_depend>hector_gazebo_plugins</test_depend> -->

<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
</export>

</package>
